--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -32,6 +32,7 @@
     &:hover {
     .nav__link {
         background-color: $blue;
+        text-decoration: none;
     }
         > .subnav {
             display: block;
@@ -124,6 +125,7 @@
     ease-in-out;
 
     &:hover {
+        text-decoration: none;
         background-color: darken($blue, 5%);
     }
 }
