--- a/app/scss/blocks/post.scss
+++ b/app/scss/blocks/post.scss
@@ -11,10 +11,12 @@
 }
 
 .post__header {
-    margin: -2.5rem -2.5rem 2.5rem;
+    margin: 0 0 2.5rem;
 
-    &_video {
-        max-width: 0 0 2.5rem;
+    
+
+    &_preview {
+        margin: -2.5rem -2.5rem 2.5rem;
     }
 }
 
@@ -38,17 +40,92 @@
 
     a {
         color: inherit;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    &__mb0 {
+        margin-bottom: 0;
+    }
+}
+
+.post__subtitle {
+    margin-top: 3rem;
+    font-style: 1.6rem;
+    font-weight: 500;
+    color: $white;
+    margin-bottom: 2rem;
+}
+
+.post__description {
+    font-size: 1.4rem;
+    color: #d2d2d2;
+}
+
+.post__text {
+    padding-bottom: 1rem;
+    font-size: 1.4rem;
+    color: $white;
+    border-bottom: 1px
+    solid #1c1c1c;
+
+    h2,h3,h4,h5,h6 {
+        margin-bottom: 2rem;
+        font-weight: 700;
+    }
+
+    h2{
+        font-style: 1.5rem;
+        
+    }
+
+    h3 {
+        font-size: 1.25rem;
+    }
+
+    h4 {
+        font-size: 1.15rem;
+    }
+
+    h5, h6 {
+        font-size: 1rem;
+    }
+
+    ul, ol {
+        margin-bottom: 2rem;
+    }
+
+    ol {
+        list-style: decimal;
+        list-style-position: inherit;
+    }
+
+    p {
+        margin-bottom: 2rem;
+    }
+
+    a {
+        color: $blue;
         text-decoration: none;
 
         &:hover {
             text-decoration: underline;
         }
     }
-}
 
-.post__text {
-    font-size: 1.4rem;
-    color: #d2d2d2;
+    table {
+        margin-bottom: 2rem;
+        width: 100%;
+    }
+
+    img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+
 }
 
 .post__footer {
@@ -137,5 +214,136 @@
     
 }
 
+.post__actions {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+    color: $white;
+    font-size: 1.2rem;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+
+        opacity: 0.6;
+        transition: opacity .2s linear;
+    }
+
+    &:hover {
+        text-decoration: underline;
+        opacity: 1;
+    }
+
+}
+
+.post__actions_icon {
+    margin-left: .5rem;
+}
+
+/* Related 
+============================ */
+
+.related {
+    padding: 3rem 0 .5rem;
+    padding-bottom: .5rem;
+
+    border-bottom: 1px
+    solid #1c1c1c;
+
+}
 
 
+.related__list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.related__list__item {
+    width: 50%;
+    margin-bottom: 2.5rem;
+}
+
+.related__list__title {
+    font-style: 1.4rem;
+    color: #f3eba2;
+    font-weight: 500;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+}
+
+.related__list__date {
+    font-style: 1.2rem;
+    color: #828282;
+}
+
+.comments {
+    margin-top: 5rem;
+
+
+}
+
+.comments__item {
+    margin-bottom: 3rem;
+
+    > .comments {
+        padding-left: 3rem;
+        margin-top: 3rem;
+    }
+}
+
+.comments__header {
+    display: flex;
+    margin-bottom: 1.5rem;
+}
+
+.comments__avatar {
+    width: 3rem;
+    height: 3rem;
+    line-height: 1.4;
+    border-radius: 50%;
+}
+
+.comment__author {
+    flex-grow: 1;
+    padding-left: 1.5rem;
+
+    font-style: 1.2rem;
+}
+
+.comments__name {
+    color: $white;
+    font-weight: 500;
+}
+
+.comments__date {
+    color: #757575;
+}
+
+.comments__text {
+    margin-bottom: 1rem;
+
+    font-size: 1.2rem;
+    line-height: 1.3;
+    color: $white;
+}
+
+.comments__reply {
+    padding: 0;
+    background: none;
+    cursor: pointer;
+    border: none;
+    font-weight: inherit;
+    font-size: 1.2rem;
+    line-height: 1.1;
+    color: $blue;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
