--- a/app/scss/blocks/sidebar.scss
+++ b/app/scss/blocks/sidebar.scss
@@ -96,12 +96,17 @@
 
     transition: background-color .2s linear;
 
+    &:hover {
+        text-decoration: none;
+    }
+
     &__red {
         background-color: $red;
         box-shadow:  0 7px 17px -10px
         rgba($color: $red, $alpha: .3);
 
         &:hover {
+            text-decoration: none;
             background-color: 
             darken($color: $red, $amount: 5%);
         }
@@ -113,6 +118,7 @@
         rgba($color: $blue, $alpha: .3);
 
         &:hover {
+            text-decoration: none;
             background-color: 
             darken($color: $blue, $amount: 5%);
         }
