--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -63,6 +63,8 @@ a {
 @import 'blocks/embed.scss';
 @import 'blocks/form.scss';
 @import 'blocks/works.scss';
+@import 'blocks/profile.scss';
+@import 'blocks/signup.scss';
 
 
 
