--- a/app/scss/blocks/page.scss
+++ b/app/scss/blocks/page.scss
@@ -1,4 +1,7 @@
 .page {
+    display: flex;
+    flex-direction: column;
+    min-height: 10vh;
     overflow: hidden;
     
 }
@@ -8,4 +11,8 @@
 
     font-size: 2.1rem;
     color: $white;
+
+    &__center {
+        text-align: center;
+    }
 }
