--- a/app/scss/blocks/sidebar.scss
+++ b/app/scss/blocks/sidebar.scss
@@ -105,7 +105,8 @@
         box-shadow:  0 7px 17px -10px
         rgba($color: $red, $alpha: .3);
 
-        &:hover {
+        &:hover,
+        &:focus {
             text-decoration: none;
             background-color: 
             darken($color: $red, $amount: 5%);
@@ -117,7 +118,8 @@
         box-shadow:  0 7px 17px -10px
         rgba($color: $blue, $alpha: .3);
 
-        &:hover {
+        &:hover,
+        &:focus {
             text-decoration: none;
             background-color: 
             darken($color: $blue, $amount: 5%);
