--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,10 @@ body {
     font-size: 1.4rem;
     color:  $white;
     line-height: 1.5;
+
+    &.no_scroll {
+      overflow: hidden;
+    }
 }
 
 *,
@@ -65,6 +69,7 @@ a {
 @import 'blocks/works.scss';
 @import 'blocks/profile.scss';
 @import 'blocks/signup.scss';
+@import 'blocks/contact-modal.scss';
 
 
 
