--- a/app/scss/blocks/add__post.scss
+++ b/app/scss/blocks/add__post.scss
@@ -14,8 +14,9 @@
 
 .add__post__textarea {
     display: block;
-    width: 80%;
+    flex-grow: 1;
     height: 26px;
+    overflow: hidden;
 
     border: none;
     background: transparent;
@@ -31,7 +32,8 @@
 }
 
 .add__actions {
-    width: 20%;
+    width: 120px;
+    flex-shrink: 0;
     display: flex;
     justify-content: flex-end;
 }
