--- a/app/scss/blocks/main.scss
+++ b/app/scss/blocks/main.scss
@@ -2,4 +2,8 @@
     padding-top: 10rem;
     padding-left: $sidebar-width;
     padding: 10rem 0 8rem $sidebar-width;
+
+    @include breakpoint($tablet-bp) {
+        padding-left: 0;
+    }
 }
