--- a/app/scss/blocks/page.scss
+++ b/app/scss/blocks/page.scss
@@ -3,6 +3,29 @@
     flex-direction: column;
     min-height: 10vh;
     overflow: hidden;
+
+    @include breakpoint($tablet-bp) {
+    .show__sidebar &  {
+
+        &:after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+
+            background-color: 
+            rgba($black, .9);
+
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 100;
+        }
+        }
+        
+
+    }
+    
     
 }
 
