--- a/app/scss/blocks/sidebar.scss
+++ b/app/scss/blocks/sidebar.scss
@@ -10,10 +10,28 @@
     top: 0;
     left: 0;
     z-index: $z-index-sidebar;
+
+    @include breakpoint($tablet-bp) {
+        display: flex;
+        flex-direction: column;
+        height: calc(100vh - 4rem);
+        padding-bottom: 1.5rem;
+        overflow: auto;
+
+        top: 4rem;
+
+        transform: translateX(-100%);
+        transition: transform .2s linear;
+
+        .show__sidebar & {
+            transform: translateX(0);
+        }
+        
+    }
 }
 
 .sidebar__header {
-    height: 180px;
+    height: 18rem;
     background-color: $secondary;
 
     img {
@@ -22,38 +40,87 @@
         height: 100%;
         object-fit: cover;
     }
+
+    @include breakpoint($tablet-bp) {
+        height: 10rem;
+    }
 }
 
 .sidebar__content {
     padding:  0 2rem;
-    margin-top: -5rem;
+
+    @include breakpoint($tablet-bp) {
+        flex-grow: 1;
+    }
+
+}
+
+/* Profile 
+===================== */
+
+.profile {
+ margin-top: -5rem;
+
+ @include breakpoint($tablet-bp) {
+    margin-top: -1rem;
+    position: relative;
+
+    border-bottom: 1px solid #1c1c1c;
+}
 }
 
 .profile__avatar {
-    position: relative;
     display: block;
     object-fit: cover;
     width: 10rem;
     height: 10rem;
     margin: 0 auto 2rem;
+    position: relative;
 
     border: 2px solid $white;
     box-shadow: 0 7px 20px
     rgba(0, 0, 0, .25);
     border-radius: 50%;
+
+    @include breakpoint($tablet-bp) {
+        width: 6.5rem;
+        height: 6.5rem;
+        position: absolute;
+        left: 0;
+
+        margin-left: 0;
+    }
+}
+
+.profile__header {
+    margin-bottom:  2rem;
+
+    text-align: center;
+
+    @include breakpoint($tablet-bp) {
+        padding-top: 2rem;
+        padding-left: 8rem;
+        text-align: left;
+    }
 }
 
 .profile__name {
     font-size: 1.8rem;
-    text-align: center;
+
+    @include breakpoint($tablet-bp) {
+        font-size: 1.5rem;
+    }
 }
 
 .profile__prof {
     font-size: 1.4rem;
     font-weight: 300;
     color: #dedede;
-    text-align: center;
-    margin-bottom:  2rem;
+
+    @include breakpoint($tablet-bp) {
+        font-size: 1.2rem;
+    }
+
 }
 
 .profile__text {
@@ -66,11 +133,19 @@
     #1c1c1c;
     border-bottom:  1px solid
     #1c1c1c;
+
+    @include breakpoint($tablet-bp) {
+        display: none;
+    }
 }
 
 .social {
     display: flex;
     justify-content: center;
+
+    @include breakpoint($tablet-bp) {
+        display: none;
+    }
 }
 
 .social__item {
