--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'vars.scss';
+@import 'mixins.scss';
 @import 'reset.scss';
 
 html {
@@ -18,7 +19,8 @@ body {
     color:  $white;
     line-height: 1.5;
 
-    &.no_scroll {
+    &.no_scroll,
+    &.show__sidebar {
       overflow: hidden;
     }
 }
@@ -70,7 +72,4 @@ a {
 @import 'blocks/profile.scss';
 @import 'blocks/signup.scss';
 @import 'blocks/contact-modal.scss';
-
-
-
-
+@import 'blocks/burger.scss';
