--- a/app/scss/blocks/header.scss
+++ b/app/scss/blocks/header.scss
@@ -142,6 +142,14 @@
     &::placeholder {
         color: rgba($color: $white, $alpha: .4);
     }
+
+    @include breakpoint($tablet-bp) {
+        height: 4rem;
+        font-size: 1.6rem;
+        padding-bottom: .9rem;
+        padding-top: .9rem;
+    }
+
 }
 
 .subnav {
