--- a/app/scss/blocks/works.scss
+++ b/app/scss/blocks/works.scss
@@ -8,6 +8,10 @@
     rgba($black, .35);
     border-radius: 5px;
 
+    @include breakpoint($mobile-bp) {
+        flex-direction: column;
+    }
+
 }
 
 .work__preview {
@@ -20,6 +24,11 @@
         object-fit: cover;
 
     }
+
+    @include breakpoint($mobile-bp) {
+        width: 100%;
+        height: 20rem;
+    }
 }
 
 .work__content {
@@ -27,6 +36,12 @@
     flex-direction: column;
     padding: 2.5rem ;
     max-width: 29rem;
+
+    @include breakpoint($mobile-bp) {
+        max-width: none;
+
+        padding: 1.5rem;
+    }
 }
 
 .work__title {
@@ -38,6 +53,10 @@
     a {
         color: inherit;
     }
+
+    @include breakpoint($mobile-bp) {
+        margin-bottom: 2rem;
+    }
 }
 
 .work__description {
@@ -46,11 +65,21 @@
     font-size: 1.6rem;
     font-weight: 300;
     color: #d2d2d2;
+
+    @include breakpoint($mobile-bp) {
+        margin-bottom: 2rem;
+
+        font-size: 1.4rem;
+    }
 }
 
 .work__footer {
     margin-top: auto;
     text-align: right;
+
+    @include breakpoint($mobile-bp) {
+        text-align: left;
+    }
 }
 
 .tags {
