--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,7 +21,7 @@ body {
 
     &.no_scroll,
     &.show__sidebar {
-        ж
+        
     }
 }
 
@@ -43,18 +43,19 @@ a {
 /* scroll bar
 ================ */
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 15px;
   }
   
   ::-webkit-scrollbar-track {
     background: #545455;
-    box-shadow: 0 0 2px rgb(0, 0, 0, 2) inset;
+    width: 3px;
+    box-shadow: 0 0 1px rgb(0, 0, 0, .4) inset;
   }
   
   ::-webkit-scrollbar-thumb {
     background: #1f1f1f;
-    border-radius: 8px;
-    border: 3px solid #9c9c9c;
+    border-radius: 25px;
+    border: 2px solid #9c9c9c;
   }
 
 /* Blocks */
