--- a/app/scss/blocks/contact-modal.scss
+++ b/app/scss/blocks/contact-modal.scss
@@ -1,5 +1,5 @@
 .modal {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -14,18 +14,10 @@
     left: 0;
     z-index: 1010;
 
-}
+    &.show {
+    display: flex;
+    }
 
-#contact__modal {
-    display: none;
-}
-
-#modal__copy {
-    display: none;
-}
-
-#modal__story {
-    display: none;
 }
 
 .modal__content {
@@ -35,9 +27,24 @@
 
     background-color: $primary;
     border-radius: 5px;
+    opacity: 0;
+
+    transform: translateY(-50px);
+    transition: transform .2s ease-in-out,
+    opacity .2s ease-in-out;
+
+    @include breakpoint($tablet-bp) {
+        padding: 5rem 3rem 3rem;
+    }
+    
 
     &__botton {
         padding-bottom: 2.5rem;
+    }
+
+    &__story {
+        padding: 0;
+        background: none;
     }
 }
 
@@ -82,4 +89,9 @@
             text-decoration: none;
         }
     }
+}
+
+.model__video {
+    display: block;
+    margin: 0 auto;
 }
