--- a/app/scss/blocks/page.scss
+++ b/app/scss/blocks/page.scss
@@ -2,31 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 10vh;
-    overflow: hidden;
-
-    @include breakpoint($tablet-bp) {
-    .show__sidebar &  {
-
-        &:after {
-            content: "";
-            display: block;
-            width: 100%;
-            height: 100%;
-
-            background-color: 
-            rgba($black, .9);
-
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 100;
-        }
-        }
-        
-
-    }
-    
-    
+    overflow: hidden; 
 }
 
 .page__title {
@@ -37,5 +13,25 @@
 
     &__center {
         text-align: center;
+    }
+}
+
+.page__mask {
+    @include breakpoint($tablet-bp)
+    {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background-color: 
+    rgba($black, .9);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+
+     
+
     }
 }
