--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,9 +19,14 @@ body {
     color:  $white;
     line-height: 1.5;
 
-    &.no_scroll,
-    &.show__sidebar {
-        
+    &.no_scroll {
+        overflow: hidden;
+    }
+
+    @include breakpoint($tablet-bp) {
+      &.show__sidebar {
+        overflow: hidden;
+    }
     }
 }
 
