--- a/app/scss/blocks/contact-modal.scss
+++ b/app/scss/blocks/contact-modal.scss
@@ -100,5 +100,10 @@
       width: 300px;
       height: 500px;
     }
+
+    @include breakpoint($mobile-bp) {
+        width: 200px;
+        height: 300px;
+      }
 }
 
